implemented whoami endpoint
